--- a/indexold2.html
+++ b/indexold2.html
@@ -7,25 +7,35 @@
   <title>Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="css/index.css">
 
 </head>
-<body>
-<div class="header">
-    <div class="logo">
-        <img src="img/lambda-black.png">
-</div>
+<header>
+<div class="topheader"> 
+    <!-- TOP Parent for Logo and Links -->
+ 
+    <div class="logoimg">
+    <img src="img/lambda-black.png">
+ </div>
+
+<div class="toplinks">
     <nav>
-        <a href="home">Home</a>
-        <a href="/about.html">About</a>
-        <a href="home">Products</a>
-        <a href="home">Blog</a>
-        <a href="home">Contact</a>
+        <a href="#">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
     </nav>
 </div>
 
+</div>
+
+</header>
+
+
+
+<body>
     <div class="container">
-            
         <div class="topimg">
             <img src="img/jumbo.jpg">
         </div>
