--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 
 </head>
 
-<body>
-
+<body> 
+    <!-- Created a container to wrap the entire site -->
+    <div class="container"> 
    
-   
-    <div class="container">
-   
-
+<!-- HeaderStartsHere -->
         <header>
             <div class="toplogo">            
                 <img src="img/lambda-black.png"class="logoimg">
@@ -32,11 +30,7 @@
             
         </header>
         <img src="img/jumbo.jpg"class="mainimg">
-
                 <section class="top-content">
-
-               
-
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -92,6 +86,6 @@
                 <a href="#">Contact</a>
             </nav>
         </footer>
-    </div><!-- container -->        
+    </div> 
 </body>
 </html>
